# ros2-wall-pilot

./: .gitignore  README.md
easyai_gazebo/: CMakeLists.txt  package.xml
easyai_gazebo/config/: easyai_wall.world
easyai_gazebo/launch/: easyai_gazebo.launch.py  easyai_gazebo_seminar.launch.py  easyai_obs_gazebo.launch.py
easyai_gazebo/rviz/: model.rviz
easyai_gazebo/urdf/: easyai.urdf.xacro  easyai_seminar.urdf.xacro  obs_vms.urdf.xacro  obstacle.urdf.xacro
wall_bot_gazebo/: package.xml
wall_bot_gazebo/config/: maze_wall.world
wall_bot_gazebo/launch/: wall_bot.launch.py
wall_bot_gazebo/urdf/: wall_bot.urdf.xacro
wall_bot_msgs/: CMakeLists.txt  package.xml  wall_bot_msgs.code-workspace
wall_bot_msgs/msg/: WallInfo.msg
wall_pilot/: package.xml  setup.cfg  setup.py
wall_pilot/wall_pilot/: wall_detector.py  wall_detector_v2.py  wall_pilot_node.py
