<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_bot_msgs</name>
  <version>0.0.1</version>
  <description>Wall bot custom message package</description>

  <maintainer email="you@example.com">Min</maintainer>
  <license>Apache-2.0</license>

  <export>                               
   <build_type>ament_cmake</build_type> 
</export>
  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>
</package>
